--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/email-form-api/node_modules
+/email-form-api
 /node_modules
 /.pnp
 .pnp.js
